# baize

./: .gitmodules  Cargo.toml  LICENSE  README.md  baize.json  info.json
.github/workflows/: rust.yml
.github/workflws/: rust.yml
.workflow/: rust.yml
src/: lib.rs  main.rs
src/api/: baize.json  configuration.rs  info.rs  mod.rs  plug.rs
src/application/: mod.rs  terminal.rs
src/keyboard/: mod.rs
src/message/: mod.rs
src/screen/: mod.rs
src/server/: mod.rs
