[package]
name = "baize"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Ruigang Zhang <3489840593@qq.com>"]
description = "由Rust实现的文本编辑器"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = {version = "1.0.136",features = ["derive"]}
anyhow = "1.0.56"
tokio = {version = "1.17.0",features = ["full"]}
mini-redis = "0.4.1"
